--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB = 'mongodb+srv://Neeraj:AvARRFrDxHXYT2sJ@cluster0.gpq1z.mongodb.net/?retryWrites=true&w=majority'
+DB ='mongodb+srv://vaswanivijay890:Vaswani786@cluster0.vnvovcr.mongodb.net/?retryWrites=true&w=majority'
